--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,9 @@
     "@langchain/google-genai": "^1.0.0",
     "@langchain/pinecone": "^1.0.0",
     "@langchain/textsplitters": "^1.0.0",
-    "@pinecone-database/pinecone": "^6.1.3",
+    "@pinecone-database/pinecone": "^5.1.2",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "langchain": "^1.0.2",
     "pdf-parse": "^1.1.1"
   }
