--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,9 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "npm run dev && exit 1"
+    "test": "npm run dev && exit 1",
+    "start": "node index.js"
+
   },
   "dependencies": {
     "@langchain/classic": "^1.0.1",
