--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "@uploadthing/react": "^7.3.3",
     "axios": "^1.13.2",
     "lucide-react": "^0.552.0",
     "react": "^19.1.1",
