--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
+    "recharts": "^3.4.1",
     "remark-gfm": "^4.0.1",
     "tailwindcss": "^4.1.17"
   },
